--- a/BBOXBATCH_onnx_model_example.ipynb
+++ b/BBOXBATCH_onnx_model_example.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7da638ba",
    "metadata": {
     "scrolled": false
@@ -130,6 +130,17 @@
      "text": [
       "d:\\3d-recon\\grounded-segment-anything\\segment_anything\\segment_anything\\build_sam.py:105: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict = torch.load(f)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "quantize_dynamic() got an unexpected keyword argument 'optimize_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 55\u001b[0m\n\u001b[0;32m     40\u001b[0m         torch\u001b[38;5;241m.\u001b[39monnx\u001b[38;5;241m.\u001b[39mexport(\n\u001b[0;32m     41\u001b[0m             onnx_model,\n\u001b[0;32m     42\u001b[0m             \u001b[38;5;28mtuple\u001b[39m(dummy_inputs\u001b[38;5;241m.\u001b[39mvalues()),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     50\u001b[0m             dynamic_axes\u001b[38;5;241m=\u001b[39mdynamic_axes,\n\u001b[0;32m     51\u001b[0m         )    \n\u001b[0;32m     53\u001b[0m onnx_model_quantized_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msam_onnx_vith_batch_quantized.onnx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 55\u001b[0m \u001b[43mquantize_dynamic\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     56\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_input\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43monnx_model_path\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     57\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43monnx_model_quantized_path\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[43m    \u001b[49m\u001b[43moptimize_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m     59\u001b[0m \u001b[43m    \u001b[49m\u001b[43mper_channel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m     60\u001b[0m \u001b[43m    \u001b[49m\u001b[43mreduce_range\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m     61\u001b[0m \u001b[43m    \u001b[49m\u001b[43mweight_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mQuantType\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mQUInt8\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     62\u001b[0m \u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: quantize_dynamic() got an unexpected keyword argument 'optimize_model'"
      ]
     }
    ],
@@ -186,7 +197,7 @@
     "            dynamic_axes=dynamic_axes,\n",
     "        )    \n",
     "\n",
-    "# onnx_model_quantized_path = \"sam_onnx_quantized_vith.onnx\"\n",
+    "onnx_model_quantized_path = \"sam_onnx_vith_batch_quantized.onnx\"\n",
     "\n",
     "# quantize_dynamic(\n",
     "#     model_input=onnx_model_path,\n",
@@ -232,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "9689b1bf",
    "metadata": {},
    "outputs": [
@@ -248,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.951965570449829\n",
-      "4.174470901489258\n"
+      "3.141530752182007\n",
+      "5.220178842544556\n"
      ]
     }
    ],
@@ -315,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "51e58d2e",
    "metadata": {},
    "outputs": [
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "579ae322",
    "metadata": {},
    "outputs": [
